# ASUP-Analysis

./: .gitignore  README.md  main.py  pyproject.toml
src/: asup_views.py  home.py  output_with_tabs.txt  requirements.txt  runapp  sidebar.py  system_hierarchy_tree
src/components/: netapp_page.py
src/graphs/: graph_as_tree.py  graph_dataframe.py
src/pages/: 01_‣_System Hierachy.py  02_‣_Port_Flapping.py
src/src/components/: colortext.py  netapp_page.py
src/utils/: preprocess.py
