[project]
name = "portflapping"
version = "0.1.0"
description = "Miscellaneous ASUP Analysis Pages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "icecream>=2.1.4",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "plotly-express>=0.4.1",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
